2012-05-04  Andrew Pinski  <apinski@cavium.com>

	* expr.c (get_def_for_expr_class): New function.
	(convert_tree_comp_to_rtx): New function.
	(expand_cond_expr_using_cmove): New function.
	(expand_expr_real_2 <case COND_EXPR>): Call
	expand_cond_expr_using_cmove first and return if it succeeds.
	Remove the check for HAVE_conditional_move since we should have
	already converted it to a conditional move.
	* config/i386/i386.c (ix86_expand_int_movcc): Disallow comparison
	modes of DImode for 32bits and TImode.

2012-05-16  Andrew Pinski  <apinski@cavium.com>

	* gimple-fold.c (get_maxval_strlen): Move COND_EXPR handling under
	GIMPLE_ASSIGN.

2012-03-12  Andrew Pinski  <apinski@cavium.com>

	* tree-ssa-phiopt.c (single_non_singleton_phi_for_edges): New function.
	(tree_ssa_phiopt_worker): Use single_non_singleton_phi_for_edges.
	(value_replacement): Likewise.
	(empty_block_p): Check also if the PHIs for the block are empty.

2012-03-09  Andrew Pinski  <apinski@cavium.com>

	PR middle-end/51988
	* tree-ssa-phiopt.c: Include tree-pretty-print.h for
	print_generic_expr.
	(tree_ssa_phiopt_worker): Go through all the PHIs for
	value_replacement instead of just the singleton one.
	(value_replacement): Change return type to int.  Return 0 instead of
	false.
	Allow the middle basic block to contain more than just the definings
	tatement. 
	Handle non empty middle basic blocks.
	* Makefile.in (tree-ssa-phiopt.o): Add tree-pretty-print.h.

2012-06-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53748
	* tree-ssa-phiopt.c (conditional_replacement): Only optimize
	if arg0/arg1 have integral or pointer types.

2012-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* tree-ssa-phiopt.c (conditional_replacement): Replace PHIs
	whose arguments are -1 and 0, by negating the result of the
	conditional.

2012-04-27  Paolo Bonzini  <bonzini@gnu.org>

	PR target/53138
	* config/i386/i386.md (x86_mov<mode>cc_0_m1_neg): Add clobber.

2012-03-22  Release Manager

	* GCC 4.7.0 released.
