@@ -1,3 +1,8 @@
+2012-04-23  Andrew Pinski  <apinski@cavium.com>
+
+	* tree-ssa-forwprop.c (simplify_bitwise_binary): Simplify (A & B) OP0
+	(C & B) to (A OP0) & B.
+
 2012-05-04  Andrew Pinski  <apinski@cavium.com>
 
 	* expr.c (get_def_for_expr_class): New function.
